Fix video annotation gap display

--- a/resources/assets/sass/videos/components/_annotationTrack.scss
+++ b/resources/assets/sass/videos/components/_annotationTrack.scss
@@ -62,7 +62,7 @@
     .svg-gap {
         stroke-width: 3;
         stroke-dasharray: 0, 6;
-        stroke-dsahoffset: 1;
+        stroke-dashoffset: 1;
         stroke-linecap: round;
         pointer-events: none;
     }
